# potterswheel

./: CMakeLists.txt  README  README.md  camera.cpp  camera.h  circle.cpp  circle.h  cylinder.cpp  cylinder.h  drawable.cpp  drawable.h  fshader.glsl  fshader2.glsl  geomfun.cpp  geomfun.h  line.cpp  line.h  main.cpp  mainwindow.ui  matrixstack.cpp  matrixstack.h  mypanelopengl.cpp  mypanelopengl.h  parseData.cpp  rectangle.cpp  rectangle.h  solarData.txt  sphere.cpp  sphere.h  spline.cpp  spline.h  square.cpp  square.h  triangle.cpp  triangle.h  vshader.glsl  vshader2.glsl
